<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>to.joe</groupId>
  <artifactId>ftp</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  
  <dependencies>
    <dependency>
      <groupId>commons-net</groupId>
      <artifactId>commons-net</artifactId>
      <version>3.13.0</version>
    </dependency>
    
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
      <version>2.12.4</version>
    </dependency>
    
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>2.12.4</version>
    </dependency>
	
	<dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.13.2</version>
    </dependency>
    
    <dependency>
      <groupId>org.xerial</groupId>
      <artifactId>sqlite-jdbc</artifactId>
      <version>3.51.3.0</version>
    </dependency>
    
  </dependencies>
  
  <build>
    <plugins>
	  <plugin>
	    <groupId>org.apache.maven.plugins</groupId>
	    <artifactId>maven-compiler-plugin</artifactId>
	    <version>3.15.0</version>
	    <configuration>
	      <source>25</source>
	      <target>25</target>
	    </configuration>
	  </plugin>
	  
	  <plugin>
	    <groupId>org.apache.maven.plugins</groupId>
	    <artifactId>maven-assembly-plugin</artifactId>
	    <version>3.8.0</version>
	    <configuration>
	      <descriptorRefs>
	        <descriptorRef>jar-with-dependencies</descriptorRef>
	      </descriptorRefs>
	      <archive>
	        <manifest>
	          <mainClass>to.joe.ftp.Main</mainClass>
	        </manifest>
	        <manifestEntries>
                <Add-Opens>java.base/sun.security.util java.base/sun.security.ssl</Add-Opens>
                <Enable-Native-Access>ALL-UNNAMED</Enable-Native-Access>
            </manifestEntries>
	      </archive>
	    </configuration>
	    <executions>
	      <execution>
            <id>make-assembly</id> <!-- this is used for inheritance merges -->
            <phase>package</phase> <!-- bind to the packaging phase -->
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
	  </plugin>
	</plugins>
  </build>
</project>